--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,35 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>My Blog</title>
+    <title>bencedanko</title>
+    <style> 
+    body {
+            font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+            background-color: #3a3a3d;
+            font-family: sans-serif;
+        }
+        
+        h1 {
+            font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+            color: #fff;
+            text-align: center;
+        }
+
+        h2 {
+            font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+            color: #fff;
+        }
+
+        p {
+            font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
-    <h1>My Blog</h1>
+    <h1>Blog</h1>
+    <p>
+    Trying out new things
+    </p>
+
 </html>
