--- a/templates/index.html
+++ b/templates/index.html
@@ -3,34 +3,81 @@
 <head>
     <meta charset="utf-8">
     <title>bencedanko</title>
+
+
+
     <style> 
     body {
             font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-            background-color: #3a3a3d;
+            background-color: #ffffff;
             font-family: sans-serif;
         }
         
         h1 {
             font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-            color: #fff;
+            color: #000000;
             text-align: center;
         }
 
         h2 {
             font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-            color: #fff;
+            color: #000000;
         }
 
         p {
             font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-            color: #fff;
+            color: #000000;
         }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            color : #ffffff;
+            background-color: #000000;
+        }
+
+        li a {
+            display: block;
+            color: #ffffff;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            display: inline;
+        }
+
+        li {
+            display: inline;
+        }
+
     </style>
 </head>
 <body>
-    <h1>Blog</h1>
+
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+    </ul>
+
+    <h1>Bence Danko</h1>
     <p>
     Trying out new things
     </p>
+
+    <p> 
+    I am currently running on the Azure webapp service.
+    </p>
+
+    <details>
+        <summary>
+            About Me
+        </summary>
+
+        <p>
+            There are many things to do in this world.
+        </p>
+
+    </details>
 
 </html>
