--- a/templates/index.html
+++ b/templates/index.html
@@ -2,56 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>bencedanko</title>
-
-
-
-    <style> 
-    body {
-            font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-            background-color: #ffffff;
-            font-family: sans-serif;
-        }
-        
-        h1 {
-            font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-            color: #000000;
-            text-align: center;
-        }
-
-        h2 {
-            font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-            color: #000000;
-        }
-
-        p {
-            font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-            color: #000000;
-        }
-
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            color : #ffffff;
-            background-color: #000000;
-        }
-
-        li a {
-            display: block;
-            color: #ffffff;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            display: inline;
-        }
-
-        li {
-            display: inline;
-        }
-
-    </style>
+    <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
