--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
 
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="blog.html">Blog</a></li>
+        <li><a href={{url_for('/')}}>Home</a></li>
+        <li><a href={{url_for('/blog')}}>Blog</a></li>
     </ul>
 
     <h1>Bence Danko</h1>
