Now functional homepage, blog directs

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
 <body>
 
     <ul>
-        <li><a href={{url_for('/')}}>Home</a></li>
-        <li><a href={{url_for('/blog')}}>Blog</a></li>
+        <li><a href={{url_for('index')}}>Home</a></li>
+        <li><a href={{url_for('blog')}}>Blog</a></li>
     </ul>
 
     <h1>Bence Danko</h1>
@@ -27,7 +27,7 @@
         </summary>
 
         <p>
-            There are many things to do in this world.
+            On my way to becoming a developer.
         </p>
 
     </details>
