--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,8 +8,8 @@
 <body>
 
     <ul>
-        <li><a href={{url_for('/')}}>Home</a></li>
-        <li><a href={{url_for('/blog')}}>Blog</a></li>
+        <li><a href={{url_for('index')}}>Home</a></li>
+        <li><a href={{url_for('blog')}}>Blog</a></li>
     </ul>
 
     <h1>Blog</h1>
