--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,31 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Blog</title>
-    <link rel="stylesheet" href="/static/styles.css">
-</head>
-<body>
+{% extends "base.html" %}
 
-    <ul>
-        <li><a href={{url_for('index')}}>Home</a></li>
-        <li><a href={{url_for('blog')}}>Blog</a></li>
-    </ul>
+{% block content %}
 
     <h1>Blog</h1>
-    <p>
-    Writing out new things
-    </p>
 
-    <details>
-        <summary>
-            Summary
-        </summary>
+    <div id="posts">
+        {% for post in posts %}
+            <details>
+                <summary>
+                    {{post.title}}
+                    //q: what is this above?
+                    //a: this is a jinja2 template variable
+                    //q: how do I add these variables?
+                    //a: in the app.py file, in the blog() function, add a variable called posts
+                    
+                </summary>
 
-        <p>
-            Content
-        </p>
+                <p>
+                    {{post.content}}
+                </p>
 
-    </details>
+            </details>
+        {% endfor %}
+    </div>
 
-</html>
+    
+{% endblock %}
