--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Home</title>
-    <link rel="stylesheet" href="/static/styles.css">
-</head>
-<body>
+{% extends "base.html" %}
 
-    <ul>
-        <li><a href={{url_for('index')}}>Home</a></li>
-        <li><a href={{url_for('blog')}}>Blog</a></li>
-    </ul>
+{% block content %}
 
     <h1>Bence Danko</h1>
+    
     <p>
     Trying out new things
     </p>
@@ -32,4 +23,4 @@
 
     </details>
 
-</html>
+{% endblock %}
