--- a/templates/posts/post1.html
+++ b/templates/posts/post1.html
@@ -1,7 +1,11 @@
+<head>
+    <link rel="stylesheet" href="/static/styles.css">
+</head>
+
 <html>
     <details>
         <summary>
-            My first post
+            My First Post
         </summary>
 
         <p>
