--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,21 @@
+code {
+    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    font-size: 12px;
+    background-color: #f9f2f4;
+    border: 1px solid #eee;
+    color: #c7254e;
+    display: block;
+    margin: 0.5em 0;
+    padding: 0.5em 0.6em;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 1.45;
+    tab-size: 4;
+    hyphens: none;
+}
+
 body {
     font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
     background-color: #ffffff;
