--- a/templates/base.html
+++ b/templates/base.html
@@ -2,14 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Blog</title>
+    <title>Bence Danko</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
 
     <ul>
         <li><a href={{url_for('index')}}>Home</a></li>
-        <li><a href={{url_for('blog')}}>Blog</a></li>
     </ul>
 
     {% block content %}
