--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,24 @@
+.wrapper {
+    position: relative;
+}
+
+.wrapper .sidebar {
+    width: 100px;
+    height: 100vh;
+    background: #000000;
+    padding: 30px 0px;
+    float: right;
+    margin-top: -40px;
+}
+
+mark {
+    color: #888888;
+    font-size: 80%;
+    background-color: #d3d3d3;
+    padding: 0.1em 0.2em;
+    border-radius: 10px;
+}
+
 code {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 12px;
@@ -36,6 +57,7 @@ h2 {
 p {
     font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
     color: #000000;
+    line-height: 10%;
 }
 
 ul {
