markdown support to replace html

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 <body>
 
     <ul>
-        <li><a href={{url_for('index')}}>Home</a></li>
+        <li><a href={{url_for('index')}}><b>Home</b></a></li>
     </ul>
 
     {% block content %}
