--- a/static/styles.css
+++ b/static/styles.css
@@ -24,7 +24,7 @@ code {
     font-size: 12px;
     background-color: #f9f2f4;
     border: 1px solid #eee;
-    color: #c7254e;
+    color: #000000;
     display: block;
     margin: 0.5em 0;
     padding: 0.5em 0.6em;
@@ -37,6 +37,11 @@ code {
     hyphens: none;
 }
 
+ol {
+    color : #000000;
+
+}
+
 body {
     font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
     background-color: #ffffff;
@@ -45,11 +50,18 @@ body {
 
 h1 {
     font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+    font-size: 17px;
     color: #000000;
-    text-align: center;
 }
 
 h2 {
+    font-size : 16px;
+    font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+    color: #000000;
+}
+
+h3 {
+    font-size : 15px;
     font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
     color: #000000;
 }
@@ -70,14 +82,25 @@ ul {
 }
 
 li a {
+    font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+    font-weight: normal;
+    display: inline;
     display: block;
-    color: #ffffff;
+    color: #000000;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     display: inline;
 }
 
+b {
+    font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+    font-weight: lighter;
+    color: #ffffff;
+}
+
+/*
 li {
     display: inline;
 }
+*/
