--- a/static/styles.css
+++ b/static/styles.css
@@ -19,57 +19,14 @@ mark {
     border-radius: 10px;
 }
 
-code {
-    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
-    font-size: 12px;
-    background-color: #f9f2f4;
-    border: 1px solid #eee;
-    color: #000000;
-    display: block;
-    margin: 0.5em 0;
-    padding: 0.5em 0.6em;
-    white-space: pre;
-    word-spacing: normal;
-    word-break: normal;
-    word-wrap: normal;
-    line-height: 1.45;
-    tab-size: 4;
-    hyphens: none;
-}
-
-ol {
-    color : #000000;
-
-}
-
 body {
-    font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-    background-color: #ffffff;
-    font-family: sans-serif;
-}
-
-h1 {
-    font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-    font-size: 17px;
-    color: #000000;
-}
-
-h2 {
-    font-size : 16px;
-    font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-    color: #000000;
-}
-
-h3 {
-    font-size : 15px;
-    font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-    color: #000000;
-}
-
-p {
-    font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-    color: #000000;
-    line-height: 10%;
+    font-family : Calibri;
+    margin: 40px auto;
+    max-width: 650px;
+    line-height: 1.4em;
+    font-size:16px;
+    color: #3b3b3b;
+    padding: 0;
 }
 
 ul {
@@ -78,15 +35,15 @@ ul {
     padding: 0;
     overflow: hidden;
     color : #ffffff;
-    background-color: #000000;
+    background-color: #3b3b3b;
 }
 
 li a {
-    font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+    font-family : Calibri;
     font-weight: normal;
     display: inline;
     display: block;
-    color: #000000;
+    color: #ffffff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -94,7 +51,7 @@ li a {
 }
 
 b {
-    font-family : Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+    font-family : Calibri;
     font-weight: lighter;
     color: #ffffff;
 }
