--- a/static/styles.css
+++ b/static/styles.css
@@ -50,7 +50,9 @@ li a {
 
 img {
     max-width: 100%;
-    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 /*
