--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Bence Danko</title>
     <link rel="stylesheet" href="/static/styles.css">
+
+    <script type="text/javascript" async
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
+
 </head>
 <body>
 
