--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>Bence Danko</title>
     <link rel="stylesheet" href="/static/styles.css">
-
-    <script type="text/javascript" async
-    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
-    </script>
-
 </head>
+
 <body>
 
     <ul>
-        <li><a href={{url_for('index')}}>Home</a></li>
+        <li>
+            <a href={{url_for('index')}}>Home</a>
+        </li>
     </ul>
+
+    <div class='sidebar'>
+        <ul>
+            <form>
+                <input type="text" name="username" placeholder="Username"><br>
+                <input type="password" name="password" placeholder="Password"><br>
+                <input type="submit" value="Login">
+            </form>
+
+            <form>
+                <input type="text" name="username" placeholder="Username"><br>
+                <input type="password" name="password" placeholder="Password"><br>
+                <input type="submit" value="Register">
+            </form>
+
+        </ul>
+    </div>
+
 
     {% block content %}
     {% endblock %}
+
 </html>
